--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Phu Duong's Porfolio Project</title>
-	<link rel="stylesheet" href="css/animate.css" />
-	<link rel="stylesheet" href="css/bootstrap.css" />
-  <link rel="stylesheet" href="css/bootstrap-theme.css" />
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300" />
+  <link rel="stylesheet" href="css/animate.css"/>
+  <link rel="stylesheet" href="css/bootstrap.css"/>
+  <link rel="stylesheet" href="css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="css/bootstrap-theme.css"/>
+  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300"/>
 </head>
 
 <body>
@@ -28,8 +29,6 @@
 
     </header>
 
-  </div>
-
   <div class="row">
     <div class="col-md-12">
       <hr class="blankline">
@@ -37,7 +36,9 @@
   </div>
 
   <div class="row">
-    <img  class="img-responsive" src="img/main-photo.png" alt="photo">
+      <div class="col-md-12">
+          <img  class="img-responsive" src="img/main-photo.png" alt="photo">
+      </div>
   </div>
 
   <div class="row">
@@ -54,7 +55,7 @@
     </div>
   </div>
 
-  <div class="element-project">
+  <div class="element-project row">
     <figure class="col-md-4">
       <div class="thumbnail project-button">
         <img class="img-project" src="img/web-developer.png" alt="img-project1">
@@ -79,20 +80,16 @@
       </div>
     </figure>
 
-    <div class="row">
-      <div class="col-md-12">
-        <hr class="blankline">
-      </div>
-    </div>
-
     <!-- TODO: add other project -->
 
-  </div>
+  </div> <!-- End of "element-project" -->
+  </div> <!-- End of "container" -->
 
-  <!-- script tag -->
+  <!-- Script tag -->
   <script src="js/jquery-3.2.1.js"></script>
   <script src="js/bootstrap.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <!-- End of script tag -->
 
 </body>
 </html>
